--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 
     <context-param>
         <param-name>DBPWD</param-name>
-        <param-value>dcd16cP_</param-value>
+        <param-value>mhfu17</param-value>
     </context-param>
 
     <context-param>
