--- a/data/pom.xml
+++ b/data/pom.xml
@@ -33,6 +33,20 @@
             <version>2.1</version>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.11.Final</version>
+            <scope>compile</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.4</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
