--- a/data/pom.xml
+++ b/data/pom.xml
@@ -1,12 +1,13 @@
 <!--
    - Name: pom.xml
    - Description: Maven setup file.
-   - Author: Raul Peña (raul.pena@gmail.com)
+   - Author: Jose Adan Nieva (josenieva93@gmail.com)
    -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.capgemini.heskuelita</groupId>
         <artifactId>module</artifactId>
