--- a/service/pom.xml
+++ b/service/pom.xml
@@ -1,12 +1,13 @@
 <!--
    - Name: pom.xml
    - Description: Maven setup file.
-   - Author: Raul Peña (raul.pena@gmail.com)
+   - Author: Jose Adan Nieva (josenieva93@gmail.com)
    -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.capgemini.heskuelita</groupId>
         <artifactId>module</artifactId>
@@ -20,16 +21,19 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>com.capgemini.heskuelita</groupId>
             <artifactId>core</artifactId>
             <version>1.0.0</version>
         </dependency>
+
         <dependency>
             <groupId>com.capgemini.heskuelita</groupId>
             <artifactId>data</artifactId>
             <version>1.0.0</version>
         </dependency>
+
     </dependencies>
 
     <build>
