--- a/web/pom.xml
+++ b/web/pom.xml
@@ -1,10 +1,14 @@
+<!--
+   - Name: pom.xml
+   - Description: Maven setup file.
+   - Author: Jose Adan Nieva (josenieva93@gmail.com)
+   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    
-
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.capgemini.heskuelita</groupId>
         <artifactId>module</artifactId>
@@ -16,40 +20,17 @@
     
     <developers>
         <developer>
-	    <id>raul.g.pena</id>
-	    <name>Raul Peña</name>
-	    <email>raul.pena@hotmail.com</email>
-	</developer>
+    	    <id>jose.a.nieva</id>
+    	    <name>José Adán Nieva</name>
+    	    <email>josenieva93@gmail.com</email>
+	   </developer>
     </developers>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-
-
     <dependencies>
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.2.4</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-dbcp2</artifactId>
-            <version>2.1</version>
-            <scope>compile</scope>
-        </dependency>
 
         <dependency>
             <groupId>com.capgemini.heskuelita</groupId>
@@ -72,9 +53,28 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.4</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.1</version>
+            <scope>compile</scope>
+        </dependency>
+        
     </dependencies>
-
-
 
     <build>
         <finalName>heskuelita</finalName>
@@ -96,7 +96,5 @@
             </plugin>
         </plugins>
     </build>
-
-
 
 </project>
